TAG: egload-4-0-0-5
TAG: egload-4-0-0-4
TAG: egload-4-0-0-3
TAG: egload-4-0-0-2
DATE: 02/28/2008
DATE: 02/26/2008
STAFF: lec
CHANGES:
1) TR8543/mouse EntrezGene load changes - gene unification

TAG: egload-4-0-0-1
DATE: 01/30/2008
STAFF: lec
CHANGES:
1) TR8743; add NG_ sequences

TAG: egload-3-5-1-9
DATE: 01/18/2007
STAFF: lec
CHANGES:
1) print line counts in tab-delimited reports

TAG: egload-3-5-1-8
DATE: 01/03/2007
STAFF: lec
CHANGES:
1) fix html/tab format

TAG: egload-3-5-1-7
TAG: egload-3-5-1-6
TAG: egload-3-5-1-5
DATE: 12/21/2006
STAFF: lec
CHANGES:
1) TR8068

TAG: egload-3-5-1-4
DATE: 12/19/2006
STAFF: lec
CHANGES:
1) re-vise HTML formatting

TAG: egload-3-5-1-3
TAG: egload-3-5-1-2
DATE: 10/23/2006
STAFF: lec
CHANGES:
1) merged tr7894 branch

TAG: egload-tr7894-10
DATE: 10/17/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-9
DATE: 10/11/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943

TAG: egload-tr7894-8
DATE: 10/10/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943

TAG: egload-tr7894-7
TAG: egload-tr7894-6
DATE: 10/06/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-5
TAG: egload-tr7894-4
TAG: egload-tr7894-3
TAG: egload-tr7894-2
DATE: 10/05/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-1
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR7894

=======
TAG: egload-tr7894-10
DATE: 10/17/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-9
DATE: 10/11/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943

TAG: egload-tr7894-8
DATE: 10/10/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943

TAG: egload-tr7894-7
TAG: egload-tr7894-6
DATE: 10/06/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-5
TAG: egload-tr7894-4
TAG: egload-tr7894-3
TAG: egload-tr7894-2
DATE: 10/05/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-1
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR7894

>>>>>>> 1.23.2.10
TAG: egload-tr7894-BP
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR7894; branch point tag

TAG: egload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge
