@@ -1,3 +1,9 @@
+TAG: egload-4-0-0-6
+DATE: 03/05/2008
+STAFF: lec
+CHANGES:
+1) TR8543/mouse EntrezGene load changes - gene unification
+
 TAG: egload-4-0-0-5
 TAG: egload-4-0-0-4
 TAG: egload-4-0-0-3
